tests/test138.rael.exp
Error [tests/test138.rael:1:35]: Invalid range for slicing
| log { 1, 2, 66, 234, 11, 75, 2 }at(3 to 1)
|                                   ^
